--- a/labelme/config/default_config.yaml
+++ b/labelme/config/default_config.yaml
@@ -13,6 +13,7 @@ labels: null
 file_search: null
 sort_labels: true
 validate_label: null
+inferdll: null
 
 default_shape_color: [0, 255, 0]
 shape_color: auto  # null, 'auto', 'manual'
